# event-booking-app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml
.github/workflows/: deploy.yml
app/: database.py  main.py  model.py  routers.py  service.py  utils.py
app/models/: account.py  booking.py  event.py  location.py  user.py
app/routers/: account_routes.py  auth.py  booking_routes.py  event_routes.py  location_routes.py  user_routes.py
public/static/: account.js  bookings.js  events.js  login.js  profile.js  script.js  style.css  utils.js
public/templates/: index.html
tests/: conftest.py  integrationtests.py  unittests.py
