[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MyEventBookingApp"
version = "0.1.0"
requires-python = ">=3.14.3"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "aiomysql>=0.3.2",
    "cryptography>=46.0.6",
    "bcrypt>=5.0.0",
    "pycountry>=26.2.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "httpx>=0.28.1",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
addopts = [
    "-v",
    "tests/unittests.py",
    "tests/integrationtests.py",
]
