[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MyEventBookingApp"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiomysql>=0.3.2",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.6",
    "fastapi[standard]>=0.135.2",
    "pycountry>=26.2.16",
    "pyjwt>=2.12.1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[tool.setuptools]
packages = ["app"]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
addopts = [
    "-v",
    "tests/unittests.py",
    "tests/integrationtests.py",
]
